<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="8dp"
        android:text="@string/AboutThis"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/aboutTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/aboutTxt"
        android:layout_width="329dp"
        android:layout_height="255dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:singleLine="false"
        android:text="@string/AboutThisText"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/introductionTxt"
        android:layout_width="332dp"
        android:layout_height="131dp"
        android:layout_marginTop="32dp"
        android:text="@string/Introduction"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutTxt" />

    <TextView
        android:id="@+id/slideTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slide_left"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/introductionTxt" />

</androidx.constraintlayout.widget.ConstraintLayout>